--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sass Exercise</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    <header>
+        <h1>This is the Header</h1>
+        <p>header</p>
+    </header>
     <div>
-        <h1>Hello World</h1>
-    </div>
-    <div>
+        <button class="btn">Hello</button>
         <p>This is a page</p>
     </div>
     <div>
-        <footer></footer>
+        <footer>
+            <p>footer</p>
+        </footer>
     </div>
 </body>
 </html>
