--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sass Exercise</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -12,8 +13,9 @@
         <h1>This is the Header</h1>
         <p>header</p>
     </header>
-    <div>
-        <button class="btn">Hello</button>
+    <div class="container">
+        <button class="jbxbtn">Hello</button>
+        <button class="jbxbtn-success">World</button>
         <p>This is a page</p>
     </div>
     <div>
