--- a/flexbox_02_scss/index.html
+++ b/flexbox_02_scss/index.html
@@ -64,8 +64,14 @@
         </div>
       
         <div class="second">
-          <div class="second-a">A</div>
-          <div class="second-b">B</div>
+          <div class="second-a">
+              <h3>hello</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
+          <div class="second-b">
+              <h3>world</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
         </div>
       </div>
       
